--- a/package.json
+++ b/package.json
@@ -1,44 +1,50 @@
 {
-  "name": "nft-project",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@metamask/onboarding": "^1.0.1",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "@web3-react/injected-connector": "^6.0.7",
-    "aos": "^2.3.4",
-    "ethers": "^5.6.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
-    "react-scroll": "^1.8.6",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "nft-project",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@alch/alchemy-web3": "^1.3.0",
+        "@metamask/onboarding": "^1.0.1",
+        "@testing-library/jest-dom": "^5.16.3",
+        "@testing-library/react": "^12.1.4",
+        "@testing-library/user-event": "^13.5.0",
+        "@web3-react/injected-connector": "^6.0.7",
+        "aos": "^2.3.4",
+        "ethers": "^5.6.2",
+        "jquery": "^3.6.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^6.2.2",
+        "react-scripts": "4.0.3",
+        "react-scroll": "^1.8.6",
+        "web-vitals": "^2.1.4",
+        "web3-eth-contract": "^1.7.1"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "web3": "^1.7.1"
+    }
 }
